--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,101 +1,5 @@
-name: otel-demo
+name: otel-spring-examples
 services:
-  grafana:
-    image: grafana/grafana:latest
-    ports:
-      - "3000:3000"
-    volumes:
-      - ./grafana/automatic.yml:/etc/grafana/provisioning/datasources/tempo.yml
-    environment:
-      # Disable authentication
-      - GF_AUTH_ANONYMOUS_ORG_NAME=Main Org.
-      - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
-      - GF_AUTH_DISABLE_LOGIN_FORM=true
-      - GF_AUTH_ANONYMOUS_ENABLED=true
-      - GF_USERS_ALLOW_SIGN_UP=false
-    networks:
-      - otel-demo-network
-    depends_on:
-      - loki
-      - tempo
-      - prometheus
-
-  tempo:
-    image: grafana/tempo:latest
-    command: [ "-config.file=/etc/tempo.yaml" ]
-    volumes:
-      - ./tempo.yaml:/etc/tempo.yaml
-      - ./tempo-data:/var/tempo
-    ports:
-      - "3200:3200"   # tempo
-#      - "9095:9095" # tempo grpc
-#      - "4317:4317"  # otlp grpc
-#      - "4318:4318"  # otlp http
-    depends_on:
-      - init
-      - memcached
-    networks:
-      - otel-demo-network
-
-  memcached:
-    image: memcached:1.6.29
-    container_name: memcached
-    ports:
-      - "11211:11211"
-    environment:
-      - MEMCACHED_MAX_MEMORY=128m  # Set the maximum memory usage
-      - MEMCACHED_THREADS=4       # Number of threads to use
-
-  init:
-    image: grafana/tempo:latest
-    user: root
-    entrypoint:
-      - "chown"
-      - "10001:10001"
-      - "/var/tempo"
-    volumes:
-      - ./tempo-data:/var/tempo
-
-  prometheus:
-    image: prom/prometheus:latest
-    container_name: prometheus
-    command:
-      - --config.file=/etc/prometheus/prometheus-config.yaml
-      - --web.console.templates=/etc/prometheus/consoles
-      - --web.console.libraries=/etc/prometheus/console_libraries
-      - --web.enable-remote-write-receiver
-      - --storage.tsdb.retention.time=1h
-      - --storage.tsdb.path=/prometheus
-      - --web.enable-lifecycle
-      - --web.route-prefix=/
-      - --web.enable-otlp-receiver
-      - --enable-feature=exemplar-storage
-    volumes:
-      - ./prometheus.yaml:/etc/prometheus/prometheus-config.yaml
-    ports:
-      - "10090:9090"
-    networks:
-      - otel-demo-network
-
-  otel-collector:
-    image: otel/opentelemetry-collector-contrib:0.114.0
-    command: [ "--config=/etc/otel-collector-config.yaml", "${OTELCOL_ARGS}" ]
-    volumes:
-      - ./otel-collector-config.yaml:/etc/otel-collector-config.yaml
-    ports:
-      - "1888:1888"   # pprof extension
-      - "8888:8888"   # Prometheus metrics exposed by the collector
-#      - "8889:8889"   # Prometheus exporter metrics
-      - "13133:13133" # health_check extension
-      - "4318:4318"   # otlp receiver
-      - "55679:55679" # zpages extension
-    depends_on:
-      - tempo
-      - prometheus
-      - loki
-    networks:
-      - otel-demo-network
-
   postgres:
     image: postgres:17-alpine
     environment:
@@ -109,7 +13,7 @@ services:
     image: localstack/localstack:latest
     ports:
       # Map the port so you can access the API from the host machine
-      - 4566:4566
+      - "4566:4566"
     volumes:
       # Here you mount your setup file so it will be executed
       # when the container starts
@@ -118,7 +22,7 @@ services:
   broker:
     image: confluentinc/cp-kafka:7.5.3
     networks:
-      - otel-demo-network
+      - otel-spring-network
     hostname: broker
     ports:
       - "9092:9092"
@@ -152,7 +56,7 @@ services:
   kafka-ui:
     image: provectuslabs/kafka-ui:8f2a29d15ddbcb49675fef0e81cebc42cf2bebf3
     networks:
-      - otel-demo-network
+      - otel-spring-network
     ports:
       - '9090:8080'
     environment:
@@ -161,16 +65,5 @@ services:
       KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: broker:29092
       KAFKA_CLUSTERS_0_PROPERTIES_SASL_MECHANISM: PLAIN
 
-  loki:
-    image: grafana/loki:latest
-    container_name: loki
-    ports:
-      - "3100:3100"
-    command: -config.file=/etc/loki/local-config.yaml
-    volumes:
-      - ./loki-config.yaml:/etc/loki/local-config.yaml
-    networks:
-      - otel-demo-network
-
 networks:
-  otel-demo-network:
+  otel-spring-network:
